--- a/style.css
+++ b/style.css
@@ -20,10 +20,6 @@ body {
   font-family: "RETROTECH";
 }
 
-img {
-  max-width: 75px;
-}
-
 button {
   cursor: pointer;
   background-color: #6f5643;
@@ -50,6 +46,7 @@ button {
 
 .choice {
   display: flex;
+  align-items: center;
   margin-bottom: 20px;
   gap: 50px;
 }
