--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ button {
 .message {
   display: flex;
   justify-content: center;
-  font-size: 45px;
+  font-size: 50px;
   margin-bottom: 20px;
 }
 
@@ -46,9 +46,12 @@ button {
 
 .choice {
   display: flex;
+  justify-content: center;
   align-items: center;
   margin-bottom: 20px;
   gap: 50px;
+  height: 260px;
+  width: 650px;
 }
 
 .game-buttons {
@@ -57,9 +60,6 @@ button {
   margin-bottom: 20px;
 }
 
-/* button:hover {
-  background-color: #5a4636;
-} */
 button:active {
   /* background-color: #503d2f; */
   /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
