--- a/style.css
+++ b/style.css
@@ -30,34 +30,43 @@ button {
   flex-direction: column;
   align-items: center;
 }
+
 .message {
   display: flex;
   justify-content: center;
   font-size: 50px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .scores {
   display: flex;
+
   gap: 50px;
   font-size: 30px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .choice {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   gap: 50px;
   height: 260px;
   width: 650px;
+}
+.player-score,
+.computer-score {
+  font-size: 35px;
+}
+.versus {
+  font-size: 25px;
 }
 
 .game-buttons {
   display: flex;
   gap: 25px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 button:active {
@@ -69,7 +78,7 @@ button:active {
 #paper,
 #scissors {
   display: inline-block;
-  padding: 5px 5px;
+  /* padding: 5px 5px; */
   background-color: transparent;
   border: none;
   border-radius: 50%;
