--- a/style.css
+++ b/style.css
@@ -29,18 +29,21 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
+  box-shadow: 1px 1px 25px rgba(0, 0, 0, 0.1);
+  padding: 50px;
+  background-color: #ece6c2;
+  border-radius: 20px;
 }
 
 .message {
   display: flex;
   justify-content: center;
-  font-size: 50px;
+  font-size: 40px;
   margin-bottom: 30px;
 }
 
 .scores {
   display: flex;
-
   gap: 50px;
   font-size: 30px;
   margin-bottom: 30px;
